--- a/01_HTML/base3.html
+++ b/01_HTML/base3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>base3</title>
 </head>
 <body>
     <h1>HOW-TO: Программа на Python, Часть 2</h1>
