--- a/01_HTML/illegible-code.html
+++ b/01_HTML/illegible-code.html
@@ -2,7 +2,7 @@
 <HTML lang="ru"> 
 <HEAD>
     <META charset="utf-8">
-    <TITLE>Пример страницы</TITLE>
+    <TITLE>illegible-code</TITLE>
 </HEAD>
 <!-- Начало документа -->  
 <BODY> 
