--- a/02_HTML_TABLE/base.html
+++ b/02_HTML_TABLE/base.html
@@ -19,8 +19,8 @@
             <th>Минск</th>
             <td>-5&deg;</td>
             <td>+5&deg;</td>
-            <td rowspan="2">+2&deg;</td>
-            <td>-10&deg;</td>
+            <td rowspan="2">+2°</td>
+            <td>-10°</td>
         </tr>
         <tr>
             <th>Брест</th>
