--- a/03_HTML_REF/python-03.html
+++ b/03_HTML_REF/python-03.html
@@ -19,8 +19,8 @@
     <h3>HOW-TO: Программа на Python, Часть 3</h3>
 
     <ul>
-        <li><u>Модули</u></li>
-        <li><u>Функции</u></li>
+        <li></u>Модули</li>
+        <li>Функции</li>
     </ul>
 
     <br>
@@ -33,13 +33,15 @@
 
     <h2>Модули</h2>
 
+    <p>К содержанию</p>
+
     <p>Модули предлагают способ расширить программирование на Python. Вы можете создать
         свои модули, использовать те, которые поставляются с Python или которые написали
         другие. В самом Python есть сотни модулей, которые облегчают написание программ.
         Список модулей, поставляемых с Python, находится по адресу:
-        <i><u>http://docs.python.org/modindex.html</u></i>. Некоторые модули предназначены для определённых
+        <i>http://docs.python.org/modindex.html</i>. Некоторые модули предназначены для определённых
         операционных систем, но большинство из них кроссплатформенные и работают
-        одинаково на <u>Linux</u>, <u>Mac</u> и <u>Microsoft Windows</u>. Для использования внешнего модуля
+        одинаково на Linux, Mac и Microsoft Windows. Для использования внешнего модуля
         необходимо импортировать его в программу. Один из модулей, поставляемых с Python,
         называется «random». Он даёт возможность генерировать псевдослучайные числа. Мы
         используем этот модуль в нашем первом примере.</p>
@@ -62,6 +64,8 @@ for cntr in range(1,15):
     <br>
 
     <h2>Функции</h2>
+
+    <p>К содержанию</p>
 
     <p>Когда мы импортировали модуль random, мы использовали функцию <b>randint()</b>. Функция
         &mdash; это блок кода, который создан для того, чтобы вызывать его в программе, обычно,
