--- a/03_HTML_REF/base/python-01.html
+++ b/03_HTML_REF/base/python-01.html
@@ -9,18 +9,18 @@
     <h1>HOW-TO: Программа на Python, Часть 1</h1>
 
     <ul>
-        <li><em>Программа на Python &mdash; часть 1</em></li>
-        <li><em>Программа на Python &mdash; часть 2</em></li>
-        <li><em>Программа на Python &mdash; часть 3</em></li>
+        <li><a href="python-01.html"><em>Программа на Python &mdash; часть 1</em></a></li>
+        <li><a href="python-02.html"><em>Программа на Python &mdash; часть 2</em></a></li>
+        <li><a href="python-03.html"><em>Программа на Python &mdash; часть 3</em></a></li>
     </ul>
 
-    <h2>Содержание</h2>
+    <h2><a name="content1">Содержание</a></h2>
 
     <h3>HOW-TO: Программа на Python, Часть 1</h3>
 
     <ul>
-        <li>Наша первая программа</li>
-        <li>Пример цикла For</li>
+        <li><a href="#first-programm">Наша первая программа</a></li>
+        <li><a href="#cycle-for">Пример цикла For</a></li>
     </ul>
 
     <p>Из множества существующих языков программирования Python &mdash; один из самых лёгких в изучении.
@@ -30,9 +30,9 @@
     программирование графических интерфейсов (<u>GUI</u>). Давайте создадим простую программу прямо
     сейчас.</p>
 
-    <h2>Наша первая программа</h2> 
+    <h2><a name="first-programm">Наша первая программа</a></h2> 
 
-    <p>К содержанию</p>
+    <p><a href="#content1">К содержанию</a></p>
 
     <p>Наберём код в текстовом редакторе (например, в <b>gedit</b>). Потом мы разберёмся, что делает каждая
     строка и пойдём дальше.</p>
@@ -60,9 +60,9 @@ greg@earth:~/python_examples$</code></pre>
 
     <p>Вот и всё.</p>
 
-    <h2>Пример цикла For</h2>
+    <h2><a name="cycle-for">Пример цикла For</a></h2>
 
-    <p>К содержанию</p>
+    <p><a href="#content1">К содержанию</a></p>
 
     <p>Теперь давайте рассмотрим пример программирования цикла. Запустите текстовый редактор и
     наберите следующую программу:</p>
