--- a/03_HTML_REF/base/python-02.html
+++ b/03_HTML_REF/base/python-02.html
@@ -9,18 +9,18 @@
     <h1>HOW-TO: Программа на Python, Часть 2</h1>
 
     <ul>
-        <li><em>Программа на Python &mdash; часть 1</em></li>
-        <li><em>Программа на Python &mdash; часть 2</em></li>
-        <li><em>Программа на Python &mdash; часть 3</em></li>
+        <li><a href="python-01.html"><em>Программа на Python &mdash; часть 1</em></a></li>
+        <li><a href="python-02.html"><em>Программа на Python &mdash; часть 2</em></a></li>
+        <li><a href="python-03.html"><em>Программа на Python &mdash; часть 3</em></a></li>
     </ul>
 
-    <h2>Содержание</h2>
+    <h2><a name="content2">Содержание</a></h2>
 
     <h3>HOW-TO: Программа на Python, Часть 2</h3>
 
     <ul>
-        <li>Списки</li>
-        <li>Комментарии</li>
+        <li><a href="#list">Списки</a></li>
+        <li><a href="#comments">Комментарии</a></li>
     </ul>
 
     <br>
@@ -32,9 +32,9 @@
         этом уроке мы рассмотрим ещё больше типов переменных и напишем ещё больше
         программ.</p>
 
-    <h2>Списки</h2>
+    <h2><a name="list">Списки</a></h2>
 
-    <p>К содержанию</p>
+    <p><a href="#content2">К содержанию</a></p>
 
     <p>Давайте рассмотрим другой тип переменных, который называется <i>списки</i>. В других
         языках программирования они называются <i>массивами</i>. Если мы обратимся к аналогии с
@@ -67,9 +67,9 @@
     <hr>
     <br>
 
-    <h2>Комментарии</h2>
+    <h2><a name="comments">Комментарии</a></h2>
 
-    <p>К содержанию</p>
+    <p><a href="#content2">К содержанию</a></p>
 
     <p>Далее, мы должны обсудить комментарии. Комментарии важны по нескольким причинам.
         Они не только говорят вам или другим людям, что вы пытаетесь делать, но и напомнят
