--- a/03_HTML_REF/base/python-03.html
+++ b/03_HTML_REF/base/python-03.html
@@ -9,18 +9,18 @@
     <h1>HOW-TO: Программа на Python, Часть 3</h1>
 
     <ul>
-        <li><em>Программа на Python &mdash; часть 1</em></li>
-        <li><em>Программа на Python &mdash; часть 2</em></li>
-        <li><em>Программа на Python &mdash; часть 3</em></li>
+        <li><a href="python-01.html"><em>Программа на Python &mdash; часть 1</em></a></li>
+        <li><a href="python-02.html"><em>Программа на Python &mdash; часть 2</em></a></li>
+        <li><a href="python-03.html"><em>Программа на Python &mdash; часть 3</em></a></li>
     </ul>
 
-    <h2>Содержание</h2>
+    <h2><a name="content3">Содержание</a></h2>
 
     <h3>HOW-TO: Программа на Python, Часть 3</h3>
 
     <ul>
-        <li></u>Модули</li>
-        <li>Функции</li>
+        <li><a href="#module">Модули</a></li>
+        <li><a href="#function">Функции</a></li>
     </ul>
 
     <br>
@@ -31,17 +31,18 @@
 присвоение, операторы <b>if</b> и <b>while</b>. Я обещал, что в этой части мы изучим модули и
 функции. Давайте начнём.</p>
 
-    <h2>Модули</h2>
+    <h2><a name="module">Модули</a></h2>
 
-    <p>К содержанию</p>
+    <p><a href="#content3">К содержанию</a></p>
 
     <p>Модули предлагают способ расширить программирование на Python. Вы можете создать
         свои модули, использовать те, которые поставляются с Python или которые написали
         другие. В самом Python есть сотни модулей, которые облегчают написание программ.
         Список модулей, поставляемых с Python, находится по адресу:
-        <i>http://docs.python.org/modindex.html</i>. Некоторые модули предназначены для определённых
+        <a href="http://docs.python.org/modindex.html" target="_blank"><i>http://docs.python.org/modindex.html</i></a>. Некоторые модули предназначены для определённых
         операционных систем, но большинство из них кроссплатформенные и работают
-        одинаково на Linux, Mac и Microsoft Windows. Для использования внешнего модуля
+        одинаково на <a href="https://ru.wikipedia.org/wiki/Linux" target="_blank">Linux</a>, <a href="https://ru.wikipedia.org/wiki/Mac_OS" target="_blank">Mac</a> и <a href="https://ru.wikipedia.org/wiki/Windows" target="_blank">Microsoft Windows</a>3.
+        . Для использования внешнего модуля
         необходимо импортировать его в программу. Один из модулей, поставляемых с Python,
         называется «random». Он даёт возможность генерировать псевдослучайные числа. Мы
         используем этот модуль в нашем первом примере.</p>
@@ -63,9 +64,9 @@ for cntr in range(1,15):
     <hr>
     <br>
 
-    <h2>Функции</h2>
+    <h2><a name="function">Функции</a></h2>
 
-    <p>К содержанию</p>
+    <p><a href="#content3">К содержанию</a></p>
 
     <p>Когда мы импортировали модуль random, мы использовали функцию <b>randint()</b>. Функция
         &mdash; это блок кода, который создан для того, чтобы вызывать его в программе, обычно,
